--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@sanity/structure": "^2.36.2",
+    "@sanity/vision": "^4.21.0",
+    "jsdom": "^27.3.0",
     "next": "16.0.8",
+    "next-sanity": "^11.6.10",
     "react": "19.2.1",
     "react-dom": "19.2.1",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "sanity": "^4.21.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
