--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,6 @@
   "buildCommand": "NEXT_TELEMETRY_DISABLED=1 npm run build",
   "env": {
     "NEXT_TELEMETRY_DISABLED": "1"
-  }
+  },
+  "root": "."
 }
