--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
   "env": {
-    "NEXT_TELEMETRY_DISABLED": "1"
+    "NEXT_TELEMETRY_DISABLED": "1",
+    "NEXT_PUBLIC_SANITY_PROJECT_ID": "9cz4jjd1",
+    "NEXT_PUBLIC_SANITY_DATASET": "production"
   }
 }
